Added new tests